--- a/ansible/ansible/03-api-db-roles/roles/db/tasks/dbconfig.yml
+++ b/ansible/ansible/03-api-db-roles/roles/db/tasks/dbconfig.yml
@@ -17,6 +17,10 @@
         owner: "{{ db_user }}"
         encoding: "{{ db_encoding }}"
 
+    - name: Debug Ip Host 'api'
+      ansible.builtin.debug:
+        msg: "{{ hostvars[groups['api'][0]]['ansible_default_ipv4']['address'] }}"
+
     - name: Pghba Configuration
       community.postgresql.postgresql_pg_hba:
         dest: /etc/postgresql/{{ pg_version}}/main/pg_hba.conf
@@ -25,6 +29,8 @@
         databases: "{{ db_name }}"
         source: "{{ hostvars[groups['api'][0]]['ansible_default_ipv4']['address'] }}"
         method: scram-sha-256
+      # register: pghba_conf
+      notify: Restart Database
 
     - name: Postgresql Config
       ansible.builtin.lineinfile:
@@ -32,3 +38,17 @@
         insertbefore: "^#listen_addresses"
         line: "listen_addresses = '*'"
         state: present
+      # register: postgresql_conf
+      notify: Restart Database
+
+
+# Restart service DB if any config change happens
+# Solution 1: conditionnal task
+# - name: Postgresql Service restart
+#   ansible.builtin.systemd:
+#     name: postgresql
+#     state: restarted
+#   when: pghba_conf is changed or postgresql_conf is changed
+
+# Solution 2: notify handlers
+# https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_handlers.html
